// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExchangeTransactionsRowMobile > should render (Expired) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-155s9if"
        data-testid="TableRow"
      >
        <td
          class="flex-col space-y-4 py-4"
          data-testid="TableRow__mobile"
        >
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              ID
            </div>
            <button
              class="link font-semibold"
              type="button"
            >
              <span
                class="no-ligatures css-0"
                data-testid="TruncateMiddle"
              >
                id
              </span>
            </button>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Recipient
            </div>
            <span
              class="font-semibold"
            />
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Timestamp
            </div>
            01.01.2021 12:00 AM
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              From
            </div>
            <div
              class="css-148b4hi"
              color="danger"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              To
            </div>
            <div
              class="css-1v19423"
              color="success"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Status
            </div>
            <span
              class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
            >
              <span>
                Expired
              </span>
              <div
                class="text-theme-danger-400 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="clock-error"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M15 8c0-3.9-3.1-7-7-7S1 4.1 1 8s3.1 7 7 7m7 4c2.2 0 4-1.8 4-4s-1.8-4-4-4-4 1.8-4 4 1.8 4 4 4z"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-miterlimit="10"
                    stroke-width="2"
                  />
                  <path
                    d="M17 13l-4 4"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                  <path
                    d="M8 8V5m0 3l1 1"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-miterlimit="10"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </span>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 disabled:cursor-not-allowed rounded bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-500 focus:ring-theme-danger-300 w-full sm:ml-auto sm:w-auto"
              data-testid="TableRemoveButton"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="trash"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRowMobile > should render (Failed) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-155s9if"
        data-testid="TableRow"
      >
        <td
          class="flex-col space-y-4 py-4"
          data-testid="TableRow__mobile"
        >
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              ID
            </div>
            <button
              class="link font-semibold"
              type="button"
            >
              <span
                class="no-ligatures css-0"
                data-testid="TruncateMiddle"
              >
                id
              </span>
            </button>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Recipient
            </div>
            <span
              class="font-semibold"
            />
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Timestamp
            </div>
            01.01.2021 12:00 AM
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              From
            </div>
            <div
              class="css-148b4hi"
              color="danger"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              To
            </div>
            <div
              class="css-1v19423"
              color="success"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Status
            </div>
            <span
              class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
            >
              <span>
                Failed
              </span>
              <div
                class="text-theme-danger-400 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="circle-cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="9"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M7 13l6-6M13 13L7 7"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </span>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 disabled:cursor-not-allowed rounded bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-500 focus:ring-theme-danger-300 w-full sm:ml-auto sm:w-auto"
              data-testid="TableRemoveButton"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="trash"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRowMobile > should render (Finished) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-155s9if"
        data-testid="TableRow"
      >
        <td
          class="flex-col space-y-4 py-4"
          data-testid="TableRow__mobile"
        >
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              ID
            </div>
            <button
              class="link font-semibold"
              type="button"
            >
              <span
                class="no-ligatures css-0"
                data-testid="TruncateMiddle"
              >
                id
              </span>
            </button>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Recipient
            </div>
            <span
              class="font-semibold"
            />
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Timestamp
            </div>
            01.01.2021 12:00 AM
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              From
            </div>
            <div
              class="css-148b4hi"
              color="danger"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              To
            </div>
            <div
              class="css-1v19423"
              color="success"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Status
            </div>
            <span
              class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
            >
              <span>
                Finished
              </span>
              <div
                class="text-theme-success-600 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="circle-check-mark"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="9"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </span>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 disabled:cursor-not-allowed rounded bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-500 focus:ring-theme-danger-300 w-full sm:ml-auto sm:w-auto"
              data-testid="TableRemoveButton"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="trash"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRowMobile > should render (New) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-155s9if"
        data-testid="TableRow"
      >
        <td
          class="flex-col space-y-4 py-4"
          data-testid="TableRow__mobile"
        >
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              ID
            </div>
            <button
              class="link font-semibold"
              type="button"
            >
              <span
                class="no-ligatures css-0"
                data-testid="TruncateMiddle"
              >
                id
              </span>
            </button>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Recipient
            </div>
            <span
              class="font-semibold"
            />
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Timestamp
            </div>
            01.01.2021 12:00 AM
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              From
            </div>
            <div
              class="css-148b4hi"
              color="danger"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              To
            </div>
            <div
              class="css-1v19423"
              color="success"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <div
                  class="flex items-center justify-center bg-theme-success-200 dark:bg-theme-success-600 -ml-1.5 px-2"
                  data-testid="AmountLabel__hint"
                >
                  <div
                    class="dark:text-white css-15txs7d"
                    height="10"
                    width="10"
                  >
                    <svg
                      id="hint-small"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M7 9H5.503A.503.503 0 0 1 5 8.497V4.503A.503.503 0 0 0 4.497 4H3.5"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      <circle
                        cx="4.5"
                        cy="1"
                        fill="currentColor"
                        r="1"
                      />
                    </svg>
                  </div>
                </div>
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Status
            </div>
            <span
              class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
            >
              <span>
                New
              </span>
              <div
                class="text-theme-secondary-500 dark:text-theme-secondary-700 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="clock"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-miterlimit="10"
                    stroke-width="2"
                    transform="translate(1.5 1.5)"
                  >
                    <circle
                      cx="8.5"
                      cy="8.5"
                      r="9"
                    />
                    <path
                      d="M8.5 8.5V5.2M8.5 8.5l3.9 3.9"
                    />
                  </g>
                </svg>
              </div>
            </span>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 disabled:cursor-not-allowed rounded bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-500 focus:ring-theme-danger-300 w-full sm:ml-auto sm:w-auto"
              data-testid="TableRemoveButton"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="trash"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRowMobile > should render (Refunded) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-155s9if"
        data-testid="TableRow"
      >
        <td
          class="flex-col space-y-4 py-4"
          data-testid="TableRow__mobile"
        >
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              ID
            </div>
            <button
              class="link font-semibold"
              type="button"
            >
              <span
                class="no-ligatures css-0"
                data-testid="TruncateMiddle"
              >
                id
              </span>
            </button>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Recipient
            </div>
            <span
              class="font-semibold"
            />
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Timestamp
            </div>
            01.01.2021 12:00 AM
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              From
            </div>
            <div
              class="css-148b4hi"
              color="danger"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              To
            </div>
            <div
              class="css-1v19423"
              color="success"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Status
            </div>
            <span
              class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
            >
              <span>
                Refunded
              </span>
              <div
                class="text-theme-warning-300 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="circle-exclamation-mark"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="9"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M10 10.5v-5"
                      stroke-linecap="round"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M10 14h0"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </span>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 disabled:cursor-not-allowed rounded bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-500 focus:ring-theme-danger-300 w-full sm:ml-auto sm:w-auto"
              data-testid="TableRemoveButton"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="trash"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRowMobile > should render (Verifying) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-155s9if"
        data-testid="TableRow"
      >
        <td
          class="flex-col space-y-4 py-4"
          data-testid="TableRow__mobile"
        >
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              ID
            </div>
            <button
              class="link font-semibold"
              type="button"
            >
              <span
                class="no-ligatures css-0"
                data-testid="TruncateMiddle"
              >
                id
              </span>
            </button>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Recipient
            </div>
            <span
              class="font-semibold"
            />
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Timestamp
            </div>
            01.01.2021 12:00 AM
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              From
            </div>
            <div
              class="css-148b4hi"
              color="danger"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              To
            </div>
            <div
              class="css-1v19423"
              color="success"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Status
            </div>
            <span
              class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
            >
              <span>
                Verifying
              </span>
              <div
                class="text-theme-warning-300 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="circle-exclamation-mark"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="9"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M10 10.5v-5"
                      stroke-linecap="round"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M10 14h0"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </span>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 disabled:cursor-not-allowed rounded bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-500 focus:ring-theme-danger-300 w-full sm:ml-auto sm:w-auto"
              data-testid="TableRemoveButton"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="trash"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRowMobile > should render NA if no orderId 1`] = `
<div>
  <tr
    class="group css-155s9if"
    data-testid="TableRow"
  >
    <td
      class="flex-col space-y-4 py-4"
      data-testid="TableRow__mobile"
    >
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          ID
        </div>
        <span
          class="text-theme-secondary-700 dark:text-theme-secondary-200"
        >
          NA
        </span>
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          Recipient
        </div>
        <span
          class="font-semibold"
        />
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          Timestamp
        </div>
        01.01.2021 12:00 AM
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          From
        </div>
        <div
          class="css-148b4hi"
          color="danger"
        >
          <div
            class="flex space-x-1 items-stretch"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              - 1 BTC
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          To
        </div>
        <div
          class="css-1v19423"
          color="success"
        >
          <div
            class="flex space-x-1 items-stretch"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              + 100 ARK
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          Status
        </div>
        <span
          class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
        >
          <span>
            Failed
          </span>
          <div
            class="text-theme-danger-400 css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="circle-cross"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-width="2"
              >
                <circle
                  cx="10"
                  cy="10"
                  r="9"
                  stroke-miterlimit="10"
                />
                <path
                  d="M7 13l6-6M13 13L7 7"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </g>
            </svg>
          </div>
        </span>
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 disabled:cursor-not-allowed rounded bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-500 focus:ring-theme-danger-300 w-full sm:ml-auto sm:w-auto"
          data-testid="TableRemoveButton"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="trash"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </button>
      </div>
    </td>
  </tr>
</div>
`;

exports[`ExchangeTransactionsRowMobile > should render transaction provider 1`] = `
<div>
  <tr
    class="group css-155s9if"
    data-testid="TableRow"
  >
    <td
      class="flex-col space-y-4 py-4"
      data-testid="TableRow__mobile"
    >
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          ID
        </div>
        <button
          class="link font-semibold"
          type="button"
        >
          <span
            class="no-ligatures css-0"
            data-testid="TruncateMiddle"
          >
            id
          </span>
        </button>
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          Recipient
        </div>
        <span
          class="font-semibold"
        >
          ChangeNOW
        </span>
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          Timestamp
        </div>
        01.01.2021 12:00 AM
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          From
        </div>
        <div
          class="css-148b4hi"
          color="danger"
        >
          <div
            class="flex space-x-1 items-stretch"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              - 1 BTC
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          To
        </div>
        <div
          class="css-1v19423"
          color="success"
        >
          <div
            class="flex space-x-1 items-stretch"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              + 100 ARK
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <div
          class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
        >
          Status
        </div>
        <span
          class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
        >
          <span>
            Failed
          </span>
          <div
            class="text-theme-danger-400 css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="circle-cross"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-width="2"
              >
                <circle
                  cx="10"
                  cy="10"
                  r="9"
                  stroke-miterlimit="10"
                />
                <path
                  d="M7 13l6-6M13 13L7 7"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </g>
            </svg>
          </div>
        </span>
      </div>
      <div
        class="flex items-center justify-between space-x-4"
      >
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 disabled:cursor-not-allowed rounded bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-500 focus:ring-theme-danger-300 w-full sm:ml-auto sm:w-auto"
          data-testid="TableRemoveButton"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="trash"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </button>
      </div>
    </td>
  </tr>
  ,
</div>
`;
